# Django_test

./: .gitignore  pyproject.toml
quotes_toscrape/quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes_toscrape/quotes/migrations/: 0001_initial.py
quotes_toscrape/quotes/static/quotes/: style.css
quotes_toscrape/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html
quotes_toscrape/quotes/templatetags/: extract.py
quotes_toscrape/quotes_toscrape/: asgi.py  settings.py  urls.py  wsgi.py
quotes_toscrape/users/: forms.py  urls.py  views.py
quotes_toscrape/users/templates/users/: add_author.html  login.html  register.html  signup.html
quotes_toscrape/utils/: migration.py
