[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["Kollos777 <kolloslit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pymongo = "^4.6.3"
python-dotenv = "^1.0.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
